# stockdata

./: .gitignore  README.md  price_robot.py  pyproject.toml
.github/workflows/: daily_track.yml
data/: currency_metadata.json  latest_prices.csv  stock_metadata.json  ticker_map.json
data/prices/: ADA.csv  ARB.csv  ATOM.csv  AVAX.csv  BNB.csv  BTC.csv  CRO.csv  DOT.csv  ETH.csv  ETHW.csv  EUR_USD.csv  GB00BP6MXD84.csv  GLP.csv  GM-ARB.csv  GM-BTC.csv  GM-ETH.csv  GM-LINK.csv  GM-USD.csv  IE0009HF1MK9.csv  IE000OHXGWO8.csv  IE00B3FH7618.csv  LINK.csv  LU0792910217.csv  LU0940007189.csv  LU1931974262.csv  NEXO.csv  NL0010273215.csv  NL0011225305.csv  NL0011354865.csv  NL0011354873.csv  NL0011354972.csv  NL0011515424.csv  NL0011872643.csv  NL0011896998.csv  NL0013552078.csv  NL0013654742.csv  NL0014040289.csv  POL.csv  SOL.csv  US45841N1072.csv  (+3 more)
docs/: nexo_snapshot_transaction_handling.md
queries/: stock_split.txt  transactions.txt
src/blockchain_reader/: date_block_mapper.py  datetime_utils.py  evm_reader.py  pipeline.py  raw_snapshots.py  symbols.py  transaction_analyzer.py
src/dashboard/: __init__.py  arbitrum_trial.py  main.py  runtime.py  services.py
src/file_paths/: __init__.py  token.txt
src/historical_transactions/: add_stock_splits.py  crypto_snapshots.py  get_getquin_transactions.py  portfolio_snapshots.py  transaction_robot.py  transform_data.py
tests/: test_arbitrum_dashboard_data.py  test_dashboard_backend.py  test_nexo_dashboard_data.py  test_price_data_utils.py  test_real_estate_dashboard_data.py  test_real_estate_module.py
(+58 files in other folders)
