[project]
name = "stockdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "mstarpy>=8.0.3",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.5.0",
    "pre-commit>=4.5.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "yfinance>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# E/W = pycodestyle, F = Pyflakes, I = isort (import sorting)
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/historical_transactions", "src/price_history"]
